--- a/src/main/resources/assets/alcoholism/lang/en_us.json
+++ b/src/main/resources/assets/alcoholism/lang/en_us.json
@@ -3,6 +3,7 @@
   "item.alcoholism.rice" : "Rice",
   "item.alcoholism.agave" : "Agave",
   "item.alcoholism.baked_agave" : "Baked Agave",
+  "item.alcoholism.mashed_agave" : "Mashed Agave",
   "block.alcoholism.distillery_block" : "Distillery",
   "block.alcoholism.tahona_block" : "Tahona",
   "itemGroup.alcoholismTab" : "Alcoholism",
