Add agave juice, mosto, ordinario, silver tequila

--- a/src/main/resources/assets/alcoholism/lang/en_us.json
+++ b/src/main/resources/assets/alcoholism/lang/en_us.json
@@ -4,6 +4,10 @@
   "item.alcoholism.agave" : "Agave",
   "item.alcoholism.baked_agave" : "Baked Agave",
   "item.alcoholism.mashed_agave" : "Mashed Agave",
+  "item.alcoholism.agave_juice" : "Agave Juice",
+  "item.alcoholism.mosto" : "Mosto",
+  "item.alcoholism.ordinario" : "Ordinario",
+  "item.alcoholism.silver_tequila" : "Silver Tequila",
   "item.alcoholism.tequila" : "Tequila",
   "block.alcoholism.distillery_block" : "Distillery",
   "block.alcoholism.tahona_block" : "Tahona",
